# demo

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
crates/todoapp-frontend/: Cargo.toml  Dioxus.toml
crates/todoapp-frontend/assets/: main.css  tailwind.css
crates/todoapp-frontend/src/: main.rs
crates/todoapp-model/: Cargo.toml
crates/todoapp-model/src/: db.rs  lib.rs
crates/todoapp-transfer/: Cargo.toml
crates/todoapp-transfer/src/: lib.rs
src/: main.rs
