[package]
name = "todoapp"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
axum = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors", "trace"] }
hyper = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

todoapp-model = { workspace = true }
todoapp-transfer = { workspace = true }

[workspace]
members = [
    "crates/todoapp-model",    # defines the models for the sled db
    "crates/todoapp-transfer", # defines the data transfer objects between frontend and backend
    "crates/todoapp-frontend", # the dioxus frontend webapp
]
resolver = "3"

[workspace.dependencies]
todoapp-model = { path = "crates/todoapp-model" }
todoapp-transfer = { path = "crates/todoapp-transfer" }

axum = "0.8.7"
dioxus = "0.7.1"
tokio = "1.48.0"
serde = "1.0.228"
serde_json = "1.0.145"
sled = "0.34.7"
bincode = "2.0.1"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4.42" }
tower-http = { version = "0.6.7" }
hyper = "1.8.1"
anyhow = "1.0.100"
reqwest = "0.12.12"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
