[package]
name = "todoapp-frontend"
version = "0.1.0"
authors = ["Fabrice <fabrice@schaub-dev.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true, features = ["router", "web"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["js"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-wasm = "0.2.1"

todoapp-transfer = { workspace = true }


[features]
default = ["web"]
web = []
