[package]
name = "todoapp-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
bincode = { workspace = true, features = ["serde"] }
sled = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
